Changes in index.html, index.js, single-movie.js, SingleMovieServlet.java, style.css:     index.html, style.css -->         - made some changes in style for readability     index.js -->         - fixed small issue with htmlHREF helper function     single-movie.js -->         - modified some attributes to better match the json     SingleMovieServlet.java -->         - added queries         - created jsonObject    NOTE :         - tried console.log the resultData, but it seems           like the files ( .html, .css, .js ) do not update           immediately

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,13 +1,13 @@
 .page-headers{
     text-align: center;
     padding-top: 10px;
-    font-family: Verdana;
+    font-family: Verdana, serif;
     color: darkblue;
     padding-bottom: 10px;
 }
 
 .fabflix{
-    font-family: Luminari;
+    font-family: Luminari, serif;
     color: seashell;
 }
 
@@ -16,8 +16,7 @@
 }
 
 thead {
-    font-family: Impact;
-    color: darkred;
+    font-family: 'Montserrat', sans-serif;
 }
 
 tbody {
